I corrected the issue with the social media icons looking ugly on smaller phones using flex-shrink

--- a/index.css
+++ b/index.css
@@ -469,8 +469,9 @@ textarea{
     }
     .social-media{
         display: flex;
-        justify-content: left;
+    
         flex-wrap: wrap;
+        flex-shrink: calc(5);
         
     }
     .social-media a{
